--- a/SJCAM/SJCAM/Style/Style.xaml
+++ b/SJCAM/SJCAM/Style/Style.xaml
@@ -38,6 +38,14 @@
 		<Setter Property="Margin" Value="10" />
 		<Setter Property="TextWrapping" Value="Wrap" />
 	</Style>
+	<Style x:Key="PivotTextBlockHeader" TargetType="TextBlock">
+		<Setter Property="FontSize" Value="40" />
+		<Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+		<Setter Property="Margin" Value="5" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+		<Setter Property="HorizontalAlignment" Value="Center" />
+		<Setter Property="Foreground" Value="WhiteSmoke" />
+	</Style>
 	<Style x:Key="GridSettingTextBlock" TargetType="TextBlock" BasedOn="{StaticResource DescriptionTextBlock}">
 		<Setter Property="FontSize" Value="17" />
 		<Setter Property="HorizontalAlignment" Value="Left" />
